fix header text alignment

--- a/gui/src/main/java/org/jboss/as/console/public/console.css
+++ b/gui/src/main/java/org/jboss/as/console/public/console.css
@@ -208,12 +208,11 @@ body {
 
     margin-top: 0px;
     margin-bottom: 10px;
-    margin-left: 5px;
     margin-right: 15px;
 
     color: #333333;
     font-family: arial,tahoma,verdana,sans-serif;
-    font-size: 11px;
+    font-size: 12px;
     line-height: 1.4;
 
 }
